# pyfibonacci

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
fibonacci/: __init__.py
fibonacci/tests/: test_fibonacci.py
