[metadata]
name = pyfibonacci
version = 0.1.0
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
url = https://github.com/maxnoe/pyfibonacci/
description = All the algorithms to calculate fibonacci numbers
license = MIT

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
tests =
  pytest
  pytest-cov
all =
	%(tests)s
